# batfish

docs/rgos/: router1.cfg  router2.cfg
projects/batfish/: BUILD.bazel
projects/batfish-common-protocol/src/main/java/org/batfish/datamodel/: ConfigurationFormat.java  Interface.java
projects/batfish-common-protocol/src/main/java/org/batfish/datamodel/vendor_family/: VendorFamily.java
projects/batfish/src/main/antlr4/org/batfish/grammar/rgos/: BUILD.bazel  RgosLexer.g4  RgosParser.g4  Rgos_bgp.g4  Rgos_common.g4  Rgos_interface.g4  Rgos_ospf.g4  Rgos_static_routes.g4  Rgos_system.g4
projects/batfish/src/main/java/org/batfish/grammar/: VendorConfigurationFormatDetector.java
projects/batfish/src/main/java/org/batfish/grammar/rgos/: BUILD.bazel  RgosCombinedParser.java  RgosConfigurationBuilder.java  RgosControlPlaneExtractor.java
projects/batfish/src/main/java/org/batfish/job/: ParseVendorConfigurationJob.java
projects/batfish/src/main/java/org/batfish/representation/cisco/: CiscoConfiguration.java
projects/batfish/src/main/java/org/batfish/representation/rgos/: AddressFamilyType.java  BUILD.bazel  BgpAggregateIpv4Network.java  BgpAggregateIpv6Network.java  BgpAggregateNetwork.java  BgpNetwork.java  BgpNetwork6.java  BgpPeerGroup.java  BgpProcess.java  BgpRedistributionPolicy.java  DistributeList.java  DynamicIpBgpPeerGroup.java  DynamicIpv6BgpPeerGroup.java  ExpandedCommunityList.java  ExpandedCommunityListLine.java  Interface.java  IpAsPathAccessList.java  IpAsPathAccessListLine.java  IpBgpPeerGroup.java  Ipv6BgpPeerGroup.java  LeafBgpPeerGroup.java  (+65 more)
(+5 files in other folders)
