load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "rgos",
    srcs = [
        ":RgosLexer.java",
        ":RgosParser.java",
        ":RgosParserBaseListener.java",
        ":RgosParserListener.java",
    ],
    javacopts = ["-XepDisableAllChecks"],
    deps = [
        "//projects/batfish/src/main/java/org/batfish/grammar/rgos/parsing:rgos_base_parser",
        "//projects/batfish-common-protocol:parser_common",
        "@maven//:org_antlr_antlr4_runtime",
    ],
)

genrule(
    name = "rgos_generated",
    srcs = glob([
        "*.g4",
    ]),
    outs = [
        "RgosLexer.java",
        "RgosLexer.tokens",
        "RgosParser.java",
        "RgosParserBaseListener.java",
        "RgosParserListener.java",
    ],
    cmd = """
java -cp $(location @antlr4_tool//jar) \
    org.antlr.v4.Tool \
    -Xexact-output-dir \
       $(location RgosLexer.g4) \
       $(location RgosParser.g4) \
    -package org.batfish.grammar.rgos \
    -encoding UTF-8 \
    -Werror \
    -o $(@D)""",
    tools = ["@antlr4_tool//jar"],
)
